# check24-messenger-challenge

./: .gitignore  docker-compose.yaml  license.md  readme.md
api/: Cargo.toml
api/entity/src/: account.rs  conversation.rs  message.rs
api/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230915_172016_create_account.rs  m20230915_210044_create_conversation.rs
api/migrations/2023-09-11-105129_create_chats/: down.sql  up.sql
api/migrations/2023-09-14-141515_add_user/: down.sql  up.sql
api/migrations/2023-09-14-160514_rename_tables/: down.sql  up.sql
api/migrations_diesel/2023-09-11-105129_create_chats/: down.sql  up.sql
api/src/: lib.rs  main.rs  models.rs  schema.rs
api/src/handler/: account.rs  conversation.rs  mod.rs  server.rs  session.rs
app/: bun.lockb  package.json
app/src/routes/: +page.svelte
app/src/routes/chat/: +page.svelte  +page.ts  chatrow.svelte
app/src/routes/conversation/: +page.svelte  chatRow.svelte  chatrow.svelte  types.ts
assets/: system-design.excalidraw
client/: Dockerfile  bun.lockb  package.json  tailwind.config.ts  tsconfig.json
client/src/: app.d.ts  authorization.ts  hooks.server.ts
client/src/lib/: api.ts  notificationStore.ts  userStore.ts
client/src/lib/components/: fileList.svelte  navbar.svelte
client/src/lib/icons/: checkIcon.svelte
client/src/lib/modals/: createEnquiryModal.svelte
client/src/lib/stores/: conversationStore.ts  index.ts  localStore.ts  notificationStore.ts  userStore.ts
client/src/routes/: +layout.svelte  +page.svelte  fileUploadModal.svelte
server/: .env  Cargo.toml  Dockerfile  docker-compose.yaml
server/api/: Cargo.toml
server/api/src/: lib.rs
server/api/src/resource/: account.rs  auth.rs  conversation.rs  enquiry.rs  message.rs  mod.rs  notification.rs  review.rs  server.rs  session.rs
server/api/src/resource/conversation/: message.rs  mod.rs
server/entity/: Cargo.toml
server/entity/src/: account.rs  active.rs  conversation.rs  conversation_account.rs  enquiry.rs  file.rs  lib.rs  message.rs  prelude.rs  review.rs  sea_orm_active_enums.rs
server/entity/src/api/: message_api.rs  mod.rs
server/entity/src/dto/: account.rs  conversation.rs  conversation_dto.rs  enquiry.rs  mod.rs  review.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20230915_172016_create_account.rs  m20230915_210044_create_conversation.rs  m20230917_112420_change_account_names.rs  m20230918_230807_change_account_picture_type.rs  m20231104_162154_add_attachments_to_message.rs  m20231107_134946_add_reviews.rs  m20231111_141729_add_enquiries.rs  main.rs
server/service/: Cargo.toml
server/service/src/: lib.rs  mutation.rs  query.rs
server/service/src/chat/: actor_message.rs  mod.rs  server.rs  session.rs
server/service/src/mutation/: account.rs  conversation.rs  enquiry.rs  file.rs  message.rs  mod.rs  review.rs
server/service/src/query/: account.rs  conversation.rs  enquiry.rs  message.rs  mod.rs  review.rs
server/src/: main.rs
(+24 files in other folders)
