[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
chrono = { version = "0.4.30", features = ["serde"] }
actix-web = "4"
actix-web-actors = "4.2.0"
serde = { version = "1.0.188", features = ["derive"] }
actix-cors = "0.6.4"
