[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
# entity = { path = "entity" }
migration = { path = "migration" }
actix = "0.13"
dotenvy = "0.15"
chrono = { version = "0.4.30", features = ["serde"] }
actix-web = "4"
actix-web-actors = "4.2.0"
serde = { version = "1.0.188", features = ["derive"] }
actix-cors = "0.6.4"
rand = "0.8.5"
log = "0.4.20"
sea-orm = { version = "0.12.2", features = ["runtime-actix"] }
