[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
service = { path = "../service/" }
entity = { path = "../entity" }
migration = { path = "../migration" }
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["redis-rs-session"] }
dotenvy = "0.15"
chrono = { version = "0.4.30", features = ["serde"] }
rand = "0.8.5"
log = "0.4.20"
sea-orm = { version = "0.12.2", features = [
  "runtime-actix",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-json",
] }
tracing-subscriber = "0.3.17"
serde_json = "1.0.107"
