[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
sea-orm = { workspace = true }
entity = { path = "../entity" }
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["redis-rs-session"] }
chrono = { version = "0.4.30", features = ["serde"] }
serde_json = "1.0.107"
log = "0.4.20"
